added .css stuff and random stuff

--- a/credits.html
+++ b/credits.html
@@ -4,6 +4,7 @@
         <title>
             Magic Dirt - Credits
         </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>
@@ -18,6 +19,7 @@
         <p>Villy Willy -> <image src='willy maybe.jpg' controls type="image/jpg" width='480'></image> </p>-->
         <a href="magicdirt.html">Go back to home page</a>
         <footer>
+        <div class="footer">
         <hr>
         <p>
             Obviously, magic dirt is just a joke, i mostly use this as a website for randoms
@@ -27,6 +29,7 @@
             Thank you for visiting VillyWilly's website! btw my minecraft username is Villy_willy
         </p>
         <hr>
+        </div>
     </footer>
     </body>
 </HTML>
