--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="Description" content="I dont know how you found this, but this is a joke website.">
         <title>VillyWilly - Landing page</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>
@@ -18,11 +19,13 @@
             <a href="magicdirt.html">Magic Dirt!!!</a>
         </p>
         <footer>
+            <DIV class="footer">
             <hr>
             <p>
                 Thank you for visiting VillyWilly's website! btw my minecraft username is Villy_willy
             </p>
             <hr>
+            </DIV>
         </footer>
     </body>
 </HTML>
