--- a/magicdirt.html
+++ b/magicdirt.html
@@ -4,9 +4,11 @@
         <title>
             VillyWilly - Magic Dirt
         </title>
+        <link rel="stylesheet" href="styles.css">
         <meta name="Description" content="I dont know how you found this, but this is a joke website.">
     </head>
 <body>
+    <div class="mD">
 <h1>Welcome to the Magic Dirt Website!</h1>
 <h2>The Greatest Dirt, fresh from Colombia!</h2>
 <h4>Disclaimer, we have no affiliation with the band Magic Dirt.</h4>
@@ -66,6 +68,7 @@
 </p>
 <p>
     <footer>
+        <div class="footer">
         <hr>
         <p>
             Obviously, magic dirt is just a joke, i mostly use this as a website for randoms
@@ -74,6 +77,8 @@
         <p>
             Thank you for visiting VillyWilly's website! btw my minecraft username is Villy_willy
         </p>
+        </div>
     </footer>
+    </div>
 </body>
 <HTML>
