--- a/orderForm.htm
+++ b/orderForm.htm
@@ -4,6 +4,7 @@
     <title>
         Magic Dirt - Order Form
     </title>
+    <link rel="stylesheet" href="styles.css">
     <meta name="Description" content="I dont know how you found this, but this is a joke website.">
     </head>
     <body>
@@ -13,15 +14,15 @@
     <h2>
         We need you to put in some information before we can deliver your dirt.
     </h2>
-    <form>
-        <label>Enter your address:</label>
-        <input name="Address" type="address"><br>
-        <label>Enter your date of birth, you must be 18+ to order:</label>
-        <input name="age" type="date"><br>
-        <button>Order</button>
-    </form>
+    <h3 id="age">
+        [Awaiting age]
+    </h3>
+    <h3 id="address">
+        [Awaiting address]
+    </h3>
     <a href="magicdirt.html">Return</a>
     <footer>
+        <div class="footer">
         <hr>
         <p>
             Obviously, magic dirt is just a joke, i mostly use this as a website for randoms
@@ -31,6 +32,8 @@
             Thank you for visiting VillyWilly's website! btw my minecraft username is Villy_willy
         </p>
         <hr>
+        </div>
     </footer>
+    <script src="orderForm.js"></script>
     </body>
 </HTML>
