--- a/dragonClient.htm
+++ b/dragonClient.htm
@@ -6,14 +6,17 @@
 			Hack Clients for MC
 		</h1>
 		<a href="DragonX_V2_International (1) (1).html">Dragon Client</a><br>
+		<link rel="stylesheet" href="styles.css">
 		<a href="PIClient (1).html">PI Client</a><br>
 		<a href="index.html">Go back</a><br>
 	<footer>
+		<DIV class="footer">
         <hr>
         <p>
             Thank you for visiting VillyWilly's website! btw my minecraft username is Villy_willy
         </p>
         <hr>
+		</DIV>
     </footer>
 	</body>
 </HTML>
