Buttons and games also fixed js
Added buttons so its easier to read, fixed the fake order form.
And working on a game thing

--- a/credits.html
+++ b/credits.html
@@ -17,7 +17,7 @@
         </p>
         <!--<p>Orion Green -> <image src='orion i think.jpg' controls type="image/jpg" width='480'></image> </p>
         <p>Villy Willy -> <image src='willy maybe.jpg' controls type="image/jpg" width='480'></image> </p>-->
-        <a href="magicdirt.html">Go back to home page</a>
+        <a href="magicdirt.html" class="btn">Go back to home page</a>
         <footer>
         <div class="footer">
         <hr>
