--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
             Fun links:
         </p>
         <p>
-            <a href="dragonClient.htm">Minecraft Clients</a>
+            <a href="dragonClient.htm" class="btn">Minecraft Clients</a>
         </p>
         <p>
-            <a href="magicdirt.html">Magic Dirt!!!</a>
+            <a href="magicdirt.html" class="btn">Magic Dirt!!!</a>
+        </p>
+        <p>
+            <a href="games/gameZone.htm" class="btn">Villy's Epic Game zone</a>
         </p>
         <footer>
             <DIV class="footer">
