--- a/magicdirt.html
+++ b/magicdirt.html
@@ -59,12 +59,12 @@
 </section>
 <a href="https://youtu.be/dQw4w9WgXcQ?si=3r0mC5NXO2vboUnf">More information</a>
 <p>
-<a href="orderForm.htm">Order here.</a>
+<a href="orderForm.htm" class="btn">Order here.</a>
 </p>
-    <a href="credits.html">Credits</a>
+    <a href="credits.html" class="btn">Credits</a>
 </p>
 <p>
-    <a href="index.html">Go back</a>
+    <a href="index.html" class="buttonBlack">Go back</a>
 </p>
 <p>
     <footer>
