--- a/orderForm.htm
+++ b/orderForm.htm
@@ -20,7 +20,7 @@
     <h3 id="address">
         [Awaiting address]
     </h3>
-    <a href="magicdirt.html">Return</a>
+    <a href="magicdirt.html" class="buttonBlack">Return</a>
     <footer>
         <div class="footer">
         <hr>
