--- a/dragonClient.htm
+++ b/dragonClient.htm
@@ -5,10 +5,12 @@
 		<h1>
 			Hack Clients for MC
 		</h1>
-		<a href="DragonX_V2_International (1) (1).html">Dragon Client</a><br>
+		<a href="DragonX_V2_International (1) (1).html" class="btn">Dragon Client</a><br>
 		<link rel="stylesheet" href="styles.css">
-		<a href="PIClient (1).html">PI Client</a><br>
-		<a href="index.html">Go back</a><br>
+		<br>
+		<a href="PIClient (1).html" class="btn">PI Client</a><br>
+		<br>
+		<a href="index.html" class="buttonBlack">Go back</a><br>
 	<footer>
 		<DIV class="footer">
         <hr>
