--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <p>
             <a href="games/gameZone.htm" class="btn">Villy's Epic Game zone</a>
         </p>
+        <p>
+            <a href="calc/calculator.htm" class="btn">Villy's Calculator</a>
+        </p>
         <footer>
             <DIV class="footer">
             <hr>
@@ -31,4 +34,5 @@
             </DIV>
         </footer>
     </body>
+
 </HTML>
