--- a/calc/calculator.htm
+++ b/calc/calculator.htm
@@ -12,7 +12,8 @@
         </p>
 
 
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../styles.css">
         <script src="calculator.js"></script>
     </body>
+
 </html>
