--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <p>
             <a href="calc/calculator.htm" class="btn">Villy's Calculator</a>
         </p>
+        <p>
+            <a href="secret area/passCheck.htm" class="buttonBlack">Admin area</a>
+        </p>
         <footer>
             <DIV class="footer">
             <hr>
