--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <HTML>
     <head>
         <meta name="Description" content="I dont know how you found this, but this is a joke website.">
@@ -25,7 +25,7 @@
             <a href="calc/calculator.htm" class="btn">Villy's Calculator</a>
         </p>
         <p>
-            <a href="secret area/passCheck.htm" class="buttonBlack">Admin area</a>
+            <a href="secret area/passCheck.htm" class="buttonBlack">Willy ONLY!!!!!!!</a>
         </p>
         <footer>
             <DIV class="footer">
@@ -37,5 +37,6 @@
             </DIV>
         </footer>
     </body>
+
 
 </HTML>
