Added disclaimer and undertale

--- a/games/gameZone.htm
+++ b/games/gameZone.htm
@@ -18,10 +18,25 @@
                 <a href="theGameFiles/99nights.htm" class="btn">
                     99 nights in a forest
                 </a>
+            <h3>
+                <a href="theGameFiles/UNDERTALE.html" class="btn">Undertale</a>
+            </h3>
+            <h3>
+                <a href="theGameFiles/Deltarune.html" class="btn">Deltarune (dont work) </a>
+            </h3>
             </h3>
             <h3>
                 <a href="../index.html" class="buttonBlack">Go back</a>
             </h3>
         </div>
+        <footer>
+            <div class="disclaimer">
+                <hr>
+                <h1>
+                    Disclaimer: You shant play these in class
+                </h1>
+                <hr>
+            </div>
+        </footer>
     </body>
 </html>
