--- a/games/gameZone.htm
+++ b/games/gameZone.htm
@@ -19,7 +19,7 @@
                     99 nights in a forest
                 </a>
             <h3>
-                <a href="theGameFiles/UNDERTALE.html" class="btn">Undertale</a>
+                <a href="theGameFiles/UNDERTALE.html" class="btn">Undertale (doesnt really work because orion gave me a fake version</a>
             </h3>
             <h3>
                 <a href="theGameFiles/Deltarune.html" class="btn">Deltarune (dont work) </a>
